--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Tiny Planet People</title>
+  <title>Tiny Civilization</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <canvas id="game"></canvas>
 
   <div id="ui">
-    <div id="title">Tiny Planet People</div>
+    <div id="title">Tiny Civilization</div>
     <div id="help">
-      WASD = move · Mouse = aim · Left click = attack<br />
-      E = talk (when near villager) · R = respawn
+      WASD = move · Mouse = select tile · Left click = build<br />
+      1: House (50c) · 2: Farm (80c) · 3: Market (150c) · 4: Hire Person (30c near house)<br />
+      E = talk (near person) · R = center camera
     </div>
-    <div id="panel">
-      <div id="stats"></div>
-      <div id="dialog"></div>
-    </div>
+    <div id="stats"></div>
+    <div id="dialog"></div>
   </div>
 
   <script src="main.js"></script>
 </body>
 </html>
+
